<resources>
    <string name="app_name">Movie Catalog</string>
    <string name="poster">poster</string>
    <string name="background_image">background image</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="user_score">User\nScore</string>
    <string name="overview">Overview</string>
    <string name="status">Status</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="type">Type</string>
    <string name="creator">Creator</string>
    <string name="movies">Movies</string>
    <string name="tv_series">TV Series</string>
    <string name="tv_series_detail">TV Series Detail</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="about_message">Developed by Deddy Romnan Rumapea\n\nIcons made by Freepik from Flaticon\n\nThis product uses the TMDb API but is not endorsed or certified by TMDb</string>
    <string name="error">Error</string>
    <string name="oops_something_went_wrong">Oops, something went wrong</string>
    <string name="go_back">Go back</string>
    <string name="image_base_url">http://image.tmdb.org/t/p/w185/%s</string>
    <string name="runtime_format">%s minutes</string>
    <string name="about">About</string>
    <string name="networks">Networks</string>
    <string name="spoken_languages">Spoken Languages</string>
    <string name="production_countries">Production Countries</string>
    <string name="last_episode">Last Episode</string>
    <string name="youtube_base_url">https://www.youtube.com/watch?v=%s</string>
    <string name="last_aired_format">Season %s | %s Episodes\n%s\n%s</string>
</resources>