<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ebony_clay"
        tools:context=".ui.detail.movie.MovieDetailActivity">

        <ProgressBar
            android:id="@+id/progress_bar_movie_detail"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:paddingTop="4dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_movie_backdrop"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/background_image"
            android:foreground="@drawable/fg_poster_shadow"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_movie_poster"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_32dp"
            android:contentDescription="@string/poster"
            app:layout_constraintBottom_toBottomOf="@id/image_movie_backdrop"
            app:layout_constraintLeft_toLeftOf="@id/image_movie_backdrop"
            app:layout_constraintTop_toTopOf="@id/image_movie_backdrop" />

        <TextView
            android:id="@+id/text_movie_title"
            style="@style/DisplayText.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:padding="@dimen/padding_16dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/image_movie_backdrop"
            tools:text="Avengers : Infinity War (2016)" />

        <TextView
            android:id="@+id/text_user_score"
            style="@style/DisplayText.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_score"
            app:layout_constraintBottom_toBottomOf="@id/text_score"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_score"
            app:layout_constraintTop_toTopOf="@id/text_score" />

        <TextView
            android:id="@+id/text_score"
            style="@style/DisplayText.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_score"
            android:padding="@dimen/padding_16dp"
            app:layout_constraintBottom_toBottomOf="@id/button_trailer"
            app:layout_constraintLeft_toRightOf="@id/text_user_score"
            app:layout_constraintRight_toLeftOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/text_movie_title"
            tools:text="75" />

        <ProgressBar
            android:id="@+id/progress_bar_score"
            style="?android:progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:progressDrawable="@drawable/circle"
            app:layout_constraintBottom_toBottomOf="@id/text_score"
            app:layout_constraintLeft_toLeftOf="@id/text_score"
            app:layout_constraintRight_toRightOf="@id/text_score"
            app:layout_constraintTop_toTopOf="@id/text_score"
            tools:progress="70" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginVertical="@dimen/margin_8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/button_trailer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_movie_title" />

        <Button
            android:id="@+id/button_trailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:drawableStart="@drawable/ic_round_play_arrow"
            android:drawablePadding="@dimen/padding_8dp"
            android:fontFamily="@font/source_sans_pro_regular"
            android:padding="@dimen/padding_8dp"
            android:text="@string/play_trailer"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/divider"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_movie_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/mirage"
            app:layout_constraintBottom_toBottomOf="@id/text_genre_movie"
            app:layout_constraintTop_toTopOf="@id/text_release_date" />

        <TextView
            android:id="@+id/text_release_date"
            style="@style/DisplayText.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32dp"
            android:drawablePadding="@dimen/padding_8dp"
            android:gravity="center"
            android:padding="@dimen/padding_8dp"
            app:drawableLeftCompat="@drawable/ic_date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_duration"
            app:layout_constraintTop_toBottomOf="@id/divider"
            tools:text="04/27/2018" />

        <TextView
            android:id="@+id/text_duration"
            style="@style/DisplayText.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/padding_8dp"
            android:gravity="center"
            android:padding="@dimen/padding_8dp"
            app:drawableLeftCompat="@drawable/ic_timer"
            app:layout_constraintLeft_toRightOf="@id/text_release_date"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_release_date"
            tools:text="2h 29m" />

        <TextView
            android:id="@+id/text_genre_movie"
            style="@style/DisplayText.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_16dp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/text_duration"
            tools:text="Adventure, Action, Science Fiction" />

        <TextView
            android:id="@+id/text_tagline"
            style="@style/DisplayText.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:gravity="center"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/text_genre_movie"
            tools:text="An entire universe. Once and for all." />


        <TextView
            android:id="@+id/text_overview_title"
            style="@style/DisplayText.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="@dimen/padding_16dp"
            android:text="@string/overview"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/text_tagline" />

        <TextView
            android:id="@+id/text_overview"
            style="@style/DisplayText.Bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:paddingBottom="@dimen/padding_16dp"
            app:layout_constraintTop_toBottomOf="@id/text_overview_title"
            tools:text="As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain." />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@id/text_language"
            app:layout_constraintTop_toTopOf="@id/text_status_title" />

        <TextView
            android:id="@+id/text_status_title"
            style="@style/DisplayText.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_16dp"
            android:text="@string/status"
            android:textColor="@color/black_text"
            app:layout_constraintTop_toBottomOf="@id/text_overview"
            app:layout_goneMarginTop="@dimen/margin_16dp" />

        <TextView
            android:id="@+id/text_status"
            style="@style/DisplayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:textColor="@color/black_text"
            app:layout_constraintTop_toBottomOf="@id/text_status_title"
            tools:text="Released" />

        <TextView
            android:id="@+id/text_budget_title"
            style="@style/DisplayText.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_16dp"
            android:text="@string/budget"
            android:textColor="@color/black_text"
            app:layout_constraintTop_toBottomOf="@id/text_status" />

        <TextView
            android:id="@+id/text_budget"
            style="@style/DisplayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:textColor="@color/black_text"
            app:layout_constraintTop_toBottomOf="@id/text_budget_title"
            tools:text="$300,000,000.00" />

        <TextView
            android:id="@+id/text_revenue_title"
            style="@style/DisplayText.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_16dp"
            android:text="@string/revenue"
            android:textColor="@color/black_text"
            app:layout_constraintTop_toBottomOf="@id/text_budget" />

        <TextView
            android:id="@+id/text_revenue"
            style="@style/DisplayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:textColor="@color/black_text"
            app:layout_constraintTop_toBottomOf="@id/text_revenue_title"
            tools:text="$2,046,239,637.00" />

        <TextView
            android:id="@+id/text_language_title"
            style="@style/DisplayText.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_16dp"
            android:text="@string/spoken_languages"
            android:textColor="@color/black_text"
            app:layout_constraintTop_toBottomOf="@id/text_revenue" />

        <TextView
            android:id="@+id/text_language"
            style="@style/DisplayText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_16dp"
            android:paddingBottom="@dimen/padding_32dp"
            android:textColor="@color/black_text"
            app:layout_constraintTop_toBottomOf="@id/text_language_title"
            tools:text="English" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>